Era hora de un commit

--- a/src/index.html
+++ b/src/index.html
@@ -29,8 +29,8 @@
                         <div class="tileInputs">
                             <label for="Tipo de calefaccion"> Tipo de calefacción:</label>
                             <select id= "Tipo de calefaccion" name = "Tipo de calefacción">
-                                <option value = "Electrico"> Eléctrico</option>
-                                <option value = "No electrico"> No electrico</option>
+                                <option value = "1"> Eléctrico</option>
+                                <option value = "0"> No electrico</option>
                             </select>
                         </div>
                     </div>
@@ -39,18 +39,18 @@
                             <div class="tileInputs">
                                 <label for="CasaPiso"> Tipo de vivienda:</label>
                                 <select id= "CasaPiso" name = "CasaPiso">
-                                    <option value = "Casa"> Casa</option>
-                                    <option value = "Piso"> Piso</option>
+                                    <option value = "0.75"> Casa</option>
+                                    <option value = "1"> Piso</option>
                                 </select>
                             </div>
                             <div class="tileInputs">
                                 <label for="Clima"> Tipo de clima:</label>
                                 <select id= "Clima" name = "Clima">
-                                    <option value = "Muy Frío"> Muy Frío</option>
-                                    <option value = "Frío"> Frío</option>
-                                    <option value = "Normal"> Normal</option>
-                                    <option value = "Cálido"> Cálido</option>
-                                    <option value = "Muy cálido"> Muy cálido</option>
+                                    <option value = "1.19"> Muy Frío</option>
+                                    <option value = "1.12"> Frío</option>
+                                    <option value = "1.04"> Normal</option>
+                                    <option value = "0.95"> Cálido</option>
+                                    <option value = "0.88"> Muy cálido</option>
                                 </select>
                             </div>
                         </div>
@@ -63,10 +63,10 @@
                             <div class = "tileInputs">
                                 <label for="Orientacion">Orientación</label>
                                 <select id= "Orientacion" name = "Orientación">
-                                    <option value = "Norte"> Norte</option>
-                                    <option value = "Sur"> Sur</option>
-                                    <option value = "Este"> Este</option>
-                                    <option value = "Oeste"> Oeste</option>
+                                    <option value = "1.12"> Norte</option>
+                                    <option value = "0.92"> Sur</option>
+                                    <option value = "1"> Este</option>
+                                    <option value = "1"> Oeste</option>
                                 </select>
                             </div>
                         </div>
@@ -74,9 +74,9 @@
                             <div class="tileInputs">
                                 <label for="Aislamiento">Aislamiento</label>
                                 <select id= "Aislamiento" name = "Aislamiento">
-                                    <option value = "Bueno"> Bueno</option>
-                                    <option value = "Sencillo"> Sencillo</option>
-                                    <option value = "Sin aislamiento"> Sin aislamiento</option>
+                                    <option value = "0.93"> Bueno</option>
+                                    <option value = "1"> Sencillo</option>
+                                    <option value = "1.10"> Sin aislamiento</option>
                                 </select>
                             </div>
                         </div>
@@ -85,6 +85,7 @@
                     <div class="electrico">
                         <label for="Electrodomesticos"> Escoge un electrodoméstico:</label>
                         <select id= "Electrodomesticos" name = "Electrodomesticos">
+                            <option value = "1500"> Nevera</option>
                             <option value = "1500"> Vitroceramica</option>
                             <option value = "1200"> Microondas</option>
                             <option value = "1500"> Horno</option>
