--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,12 @@
+<!--
+SPDX-FileCopyrightText: 2024 Alejandro Bezerra
+SPDX-FileCopyrightText: 2024 Anton Souto
+SPDX-FileCopyrightText: 2024 Enrique Adega
+SPDX-FileCopyrightText: 2024 Guillen Porto
+
+SPDX-License-Identifier: GPL-3.0
+-->
+
 <!DOCTYPE HTML>
 <html LANG="es">
     <head>
