--- a/src/index.html
+++ b/src/index.html
@@ -131,14 +131,14 @@ SPDX-License-Identifier: GPL-3.0
                     <div class="row">
                         <div class="tileInputs">
                             <label for="ConsumoT">Consumo total de la factura (Kw/h):</label>
-                            <input type="number" id="ConsumoT" name="ConsumoT" min="0" required>
+                            <input type="number" class = "billInput" id="ConsumoT" name="ConsumoT" min="0" required>
                         </div>
                     </div>
 
                     <div class="row">
                         <div class="tileInputs">
                             <label for="PrecioT">Precio total de la factura (€):</label>
-                            <input type="number" id="PrecioT" name="PrecioT" min="0" required>
+                            <input type="number" class = "billInput" id="PrecioT" name="PrecioT" min="0" required>
                         </div>
                     </div>
                     
