--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@ SPDX-FileCopyrightText: 2024 Anton Souto
 SPDX-FileCopyrightText: 2024 Enrique Adega
 SPDX-FileCopyrightText: 2024 Guillen Porto
 
-SPDX-License-Identifier: GPL-3.0
+SPDX-License-Identifier: Apache-2.0
 -->
 
 <!DOCTYPE HTML>
