--- a/src/index.html
+++ b/src/index.html
@@ -127,10 +127,9 @@ SPDX-License-Identifier: Apache-2.0
                     <div class="row">
                         <button type = "button" class = "discrimination-button" id = "BotonSDH"> Sin Discriminación Horaria </button>
                     </div>
-
                     <div class="row">
                         <div class="tileInputs">
-                            <label for="ConsumoT">Consumo total de la factura (Kw/h):</label>
+                            <label for="ConsumoT">Consumo de la factura (Kw/h):</label>
                             <input type="number" class = "billInput" id="ConsumoT" name="ConsumoT" min="0" required>
                         </div>
                     </div>
