--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@ SPDX-License-Identifier: Apache-2.0
     </head>
     <body>
         <header>
-            <button class="header-button active" type = "button" id = "boton-fijo">Fijo</button>
+            <button class="header-button active" type = "button" id = "boton-fijo">Potencia máxima</button>
             <div class="space"></div>
             <button class="header-button" type = "button" id = "boton-tarifa">Tarifa</button>
         </header>
